# witness-sbomit-build-and-diff

./: .env.example  .gitignore  Agent.MD  README.md  pyproject.toml
docker/: Dockerfile.base
scripts/: build-base-image.sh  start-worker.py
src/: cli.py  config.py
src/analyzer/: differ.py  parser.py  reporter.py
src/classifier/: graph.py  models.py  prompts.py
src/discovery/: extract_models.py  graph.py  models.py  prompts.py  tools.py
src/executor/: installer.py  reconcile.py  runner.py  sbom_gen.py  witness.py
src/orchestrator/: activities.py  client.py  models.py  workflows.py
src/storage/: __init__.py  db.py  models.py
tests/: test_differ.py  test_discovery_tools.py  test_reconcile.py
