[project]
name = "sbomit-accuracy-analyzer"
version = "0.1.0"
description = "Agentic pipeline for comparing SBOM accuracy compared to SBOMit"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "dagger-io>=0.13",
    "spdx-tools>=0.8",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "typer>=0.12",
    "rich>=13.0",
    "temporalio>=1.7",
    "httpx>=0.27",
    "langchain-openrouter>=0.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
sbomit-analyzer = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
